# strata-benchmarks

./: .gitignore  Cargo.toml
benches/ann/: ann.rs
benches/arrow/: arrow.rs
benches/branch/: branch_isolation.rs
benches/embed/: embed.rs
benches/fill-level/: fill_level.rs
benches/graph/: graph_bfs.rs  graph_cdlp.rs  graph_lcc.rs  graph_pr.rs  graph_sssp.rs  graph_wcc.rs  ldbc.rs  mem_profile.rs
benches/harness/: mod.rs
benches/memory-efficiency/: memory_efficiency.rs
benches/redb-bench/: common.rs  redb_benchmark.rs
benches/scaling/: scaling.rs
benches/ycsb/: ycsb_compare.rs  ycsb_doc.rs
docs/: scaling-report-2026-03-07.md
scripts/: compare-baselines.sh  download-ldbc.sh  download-stsb.sh  run-benchmarks.sh
