[package]
name = "strata-benchmarks"
version = "0.1.0"
edition = "2021"
description = "Black-box tests and performance benchmarks for StrataDB"
license = "Apache-2.0"

[dependencies]
stratadb = { path = "../strata-core", features = ["embed", "openai"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
instant-distance = "0.6"
petgraph = "0.7"
tempfile = "3.8"
tracing-subscriber = "0.3"
fastembed = "5"
redb = "2"
heed = "0.22"
rocksdb = { version = "0.22.0", default-features = false, features = ["lz4"] }
sled = "0.34.7"
fjall = "=2.11"
rusqlite = { version = "0.38.0", features = ["bundled"] }
fastrand = "2.0.0"
walkdir = "2.5.0"
byte-unit = "5.1.6"
comfy-table = "7.0.1"
ctrlc = "3.2.3"
env_logger = "0.11"
hex = "0.4"
redis = "0.27"
mongodb = "3"
qdrant-client = "1"
neo4rs = "0.8"
tokio = { version = "1", features = ["full"] }

[[bench]]
name = "kv"
path = "benches/latency/kv.rs"
harness = false

[[bench]]
name = "state"
path = "benches/latency/state.rs"
harness = false

[[bench]]
name = "event"
path = "benches/latency/event.rs"
harness = false

[[bench]]
name = "json"
path = "benches/latency/json.rs"
harness = false

[[bench]]
name = "vector"
path = "benches/latency/vector.rs"
harness = false

[[bench]]
name = "branch"
path = "benches/latency/branch.rs"
harness = false

[[bench]]
name = "concurrency"
path = "benches/concurrency/concurrency.rs"
harness = false

[[bench]]
name = "redis_compare"
path = "benches/redis-compare/redis_compare.rs"
harness = false

[[bench]]
name = "fill_level"
path = "benches/fill-level/fill_level.rs"
harness = false

[[bench]]
name = "graph_bfs"
path = "benches/graph/graph_bfs.rs"
harness = false

[[bench]]
name = "graph_wcc"
path = "benches/graph/graph_wcc.rs"
harness = false

[[bench]]
name = "graph_cdlp"
path = "benches/graph/graph_cdlp.rs"
harness = false

[[bench]]
name = "graph_pr"
path = "benches/graph/graph_pr.rs"
harness = false

[[bench]]
name = "graph_lcc"
path = "benches/graph/graph_lcc.rs"
harness = false

[[bench]]
name = "graph_sssp"
path = "benches/graph/graph_sssp.rs"
harness = false

[[bench]]
name = "ycsb"
path = "benches/ycsb/ycsb.rs"
harness = false

[[bench]]
name = "ycsb_doc"
path = "benches/ycsb/ycsb_doc.rs"
harness = false

[[bench]]
name = "ann"
path = "benches/ann/ann.rs"
harness = false

[[bench]]
name = "mem_profile"
path = "benches/graph/mem_profile.rs"
harness = false

[[bench]]
name = "embed"
path = "benches/embed/embed.rs"
harness = false

[[bench]]
name = "scaling"
path = "benches/scaling/scaling.rs"
harness = false

[[bench]]
name = "arrow"
path = "benches/arrow/arrow.rs"
harness = false

[[bench]]
name = "redb_benchmark"
path = "benches/redb-bench/redb_benchmark.rs"
harness = false

[[bench]]
name = "industry_compare"
path = "benches/load-compare/industry_compare.rs"
harness = false

[[bench]]
name = "branch_isolation"
path = "benches/branch/branch_isolation.rs"
harness = false

[[bench]]
name = "ycsb_compare"
path = "benches/ycsb/ycsb_compare.rs"
harness = false

[[bench]]
name = "memory_efficiency"
path = "benches/memory-efficiency/memory_efficiency.rs"
harness = false

[profile.bench]
debug = true

[[bin]]
name = "bench-compare"
path = "src/bin/compare.rs"
